--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ header {
 }
 
 /* Iphone X, 11, 12, 13 viewport */
+/* Iphone viewport is 390px */
 @media (max-width: 400px) {
     .image-logo {
         width: 30px;
@@ -284,8 +285,85 @@ header {
     }
 }
 
+
+/* Samung a50 viewport 412px | TESTING */
+@media (min-width: 401px) and (max-width: 500px) {
+    .image-logo {
+        width: 30px;
+        top: 18px;
+    }
+
+    header {
+        padding: 1px 2px 1px 55px;
+    }
+
+    .text-logo {
+        font-size: 0.5rem;
+        margin-right: 30px;
+    }
+
+    /* Testing for samsung A50 */
+    #showcase .logo {
+        width: 150px;
+        left: 6.7rem;
+        top: 6rem;
+    }
+
+    #showcase h1 {
+        font-size: 70px;
+        line-height: 60px;
+        text-align: center;
+    }
+    
+    #showcase h3 {
+        margin: 20px 0;
+        font-weight: 10;
+        font-size: 30px;
+        margin-left: 2px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+    }
+    
+    #showcase p {
+        font-size: 50px;
+        font-weight: 600;
+        text-align: center;
+        font-family: 'Lora', serif;
+    }
+
+    /*  */
+
+    .nav__list-item {
+        margin: 10px 12px;
+    }
+
+    .nav__link {
+        margin-top: 10px;
+        font-size: 0.5rem;
+    }
+
+    .add-parallax {
+        background-image: url(images/baby-photo.jpeg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 200px 0;
+        margin-bottom: 40px;
+    }
+
+    .inner-parallax .quote {
+        font-size: 70px !important;
+        margin-top: -10px !important;
+        color: rgb(59, 59, 59);
+    }
+}
+
+
+
 /* Samsung s21 ultra viewport */
-@media (min-width: 350px) and (max-width: 380px) {
+/* Samung a50 viewport 412px */
+/* Samung s10 viewport 360px */
+@media (min-width: 340px) and (max-width: 380px) {
     .image-logo {
         width: 30px;
         top: 18px;
