added media queries for some devices

--- a/style.css
+++ b/style.css
@@ -287,10 +287,11 @@ header {
 
 
 /* Samung a50 viewport 412px | TESTING */
-@media (min-width: 401px) and (max-width: 500px) {
+@media (min-width: 401px) and (max-width: 600px) {
     .image-logo {
         width: 30px;
-        top: 18px;
+        left: 18px;
+        top: 10px;
     }
 
     header {
@@ -305,7 +306,7 @@ header {
     /* Testing for samsung A50 */
     #showcase .logo {
         width: 150px;
-        left: 6.7rem;
+        left: 8rem;
         top: 6rem;
     }
 
@@ -356,14 +357,60 @@ header {
         margin-top: -10px !important;
         color: rgb(59, 59, 59);
     }
+
+    .contact-bg {
+        display: flex;
+        justify-content: center;
+    }
 }
 
+
+@media (min-width: 600px) and (max-width: 800px) {
+    .text-logo {
+        font-size: 0.5rem;
+        margin-right: 30px;
+    }
+
+    /* Testing for samsung A50 */
+    #showcase .logo {
+        width: 150px;
+        left: 8rem;
+        top: 6rem;
+    }
+
+    #showcase h1 {
+        font-size: 70px;
+        line-height: 60px;
+        text-align: center;
+    }
+    
+    #showcase h3 {
+        margin: 20px 0;
+        font-weight: 10;
+        font-size: 30px;
+        margin-left: 2px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+    }
+    
+    #showcase p {
+        font-size: 50px;
+        font-weight: 600;
+        text-align: center;
+        font-family: 'Lora', serif;
+    }
+
+    .contact-bg {
+        display: flex;
+        justify-content: center;
+    }
+}
 
 
 /* Samsung s21 ultra viewport */
 /* Samung a50 viewport 412px */
 /* Samung s10 viewport 360px */
-@media (min-width: 340px) and (max-width: 380px) {
+@media (min-width: 350px) and (max-width: 380px) {
     .image-logo {
         width: 30px;
         top: 18px;
@@ -377,37 +424,6 @@ header {
         font-size: 0.5rem;
         margin-right: 30px;
     }
-
-    /* Testing for samsung A50 */
-    #showcase .logo {
-        width: 150px;
-        left: 6.7rem;
-        top: 6rem;
-    }
-
-    #showcase h1 {
-        font-size: 70px;
-        line-height: 60px;
-        text-align: center;
-    }
-    
-    #showcase h3 {
-        margin: 20px 0;
-        font-weight: 10;
-        font-size: 30px;
-        margin-left: 2px;
-        text-align: center;
-        color: rgb(255, 255, 255);
-    }
-    
-    #showcase p {
-        font-size: 50px;
-        font-weight: 600;
-        text-align: center;
-        font-family: 'Lora', serif;
-    }
-
-    /*  */
 
     .nav__list-item {
         margin: 10px 12px;
@@ -431,6 +447,11 @@ header {
         font-size: 70px !important;
         margin-top: -10px !important;
         color: rgb(59, 59, 59);
+    }
+
+    .contact-bg {
+        display: flex;
+        justify-content: center;
     }
 }
 
@@ -633,6 +654,11 @@ header {
         padding: 20px 20px 30px 20px !important;
         margin: 38px 60px 20px 60px !important;
     }
+
+    .contact-bg {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 /* Tablet Viewport */
@@ -678,6 +704,11 @@ header {
     .box-background {
         padding: 20px 20px 30px 20px !important;
         margin: 38px 60px 20px 60px !important;
+    }
+
+    .contact-bg {
+        display: flex;
+        justify-content: center;
     }
 }
 
