--- a/style.css
+++ b/style.css
@@ -462,8 +462,9 @@ header {
     }
 
     #showcase h1 {
-       margin-left: 1px;
+        margin-left: 1px;
         text-align: center;
+        margin: 0 0 10px 0;
     }
     
     #showcase h3 {
@@ -478,6 +479,10 @@ header {
         font-size: 50px;
         font-weight: 600;
         font-family: 'Lora', serif;
+    }
+
+    .content-title {
+        font-size: 2.6rem !important;
     }
 
     .add-parallax {
