--- a/style.css
+++ b/style.css
@@ -331,13 +331,17 @@ header {
     }
     
     #showcase h3 {
-        margin-right: 3px;
+        margin: 10px 0;
+        font-weight: 10;
+        font-size: 23px;
+        color: rgb(255, 255, 255);
+        /* margin-right: 3px;
         margin: 16px 0;
         font-weight: 10;
         font-size: 25px;
         margin-left: 2px;
         text-align: center;
-        color: rgb(255, 255, 255);
+        color: rgb(255, 255, 255); */
     }
 
     
