center title and made font smaller for phone view

--- a/style.css
+++ b/style.css
@@ -317,14 +317,18 @@ header {
     }
 
     /* Testing for samsung A50 */
+    #showcase .textwidget {
+        text-align: center;
+    }
+
     #showcase .logo {
         width: 150px;
         left: 8rem;
-        top: 5rem;
+        top: 6rem;
     }
 
     #showcase h1 {
-        margin-right: 3px;
+        margin-left: 1px;
         font-size: 70px;
         line-height: 70px;
         text-align: center;
@@ -346,7 +350,7 @@ header {
 
     
     #showcase p {
-        margin-right: 6px;
+        margin-right: 5px;
         font-size: 50px;
         font-weight: 600;
         text-align: center;
